@@ -1,0 +1,5 @@
+int
+ya (void)
+{
+  return (long int) (1 / 0);
+}
