@@ -1,3 +1,11 @@
+2020-01-22  Joseph Myers  <joseph@codesourcery.com>
+
+	Backport from mainline:
+	2020-01-22  Joseph Myers  <joseph@codesourcery.com>
+
+	PR c/93348
+	* gcc.c-torture/compile/pr93348-1.c: New test.
+
 2020-01-21  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	Backport from mainline
